@@ -20,7 +20,7 @@ AC_SUBST(POPT_REQUIRED)
 dnl ===========================================================================
 
 LIBRSVG_MAJOR_VERSION=2
-LIBRSVG_MINOR_VERSION=99
+LIBRSVG_MINOR_VERSION=11
 LIBRSVG_MICRO_VERSION=0
 AC_SUBST(LIBRSVG_MAJOR_VERSION)
 AC_SUBST(LIBRSVG_MINOR_VERSION)
