@@ -1,3 +1,8 @@
+2005-08-25  Caleb Moore <c.moore@student.unsw.edu.au>
+
+	* rsvg.c: disabled char nodes. Chopped off namespaces.
+	* configure.in: bumped version number to 2.11.0
+	
 2005-07-21  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-art-mask.c: fixed clip paths having their transform applied twice
